--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,60 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<header class="header">
+		<div class="logo">
+			<a href="https://beetroot.se/">
+				<img src="img/logo.png" alt="beetroot logo">
+			</a>
+		</div>
+		<nav class="navigation">
+			<ul>
+				<li><a href="#beetroot">beetroot</a></li>
+				<li><a href="#html">html</a></li>
+				<li><a href="#css">css</a></li>
+				<li><a href="#gulp">gulp</a></li>
+				<li><a href="#js">js</a></li>
+				<li><a href="#validator">validator</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section id="beetroot">
+		<div>
+			<img src="/img/beetroot-img.svg" alt="beetroot">
+			<h2>beetroot</h2>
+		</div>
+	</section>
+	<section id="html">
+<div>
+	<img src="/img/html-img.jpg" alt="html">
+	<h2>html</h2>
+</div>
+	</section>
+	<section id="css">
+<div>
+	<img src="/img/css-img.jpg" alt="css">
+	<h2>css</h2>
+</div>
+	</section>
+	<section id="gulp">
+<div>
+	<img src="/img/gulp-img.jpg" alt="gulp">
+	<h2>gulp</h2>
+</div>
+	</section>
+	<section id="js">
+<div>
+	<img src="/img/js-img.jpg" alt="js">
+	<h2>js</h2>
+</div>
+	</section>
+	<section id="validator">
+<div>
+	<img src="/img/validator-img.jpg" alt="w3c validator">
+	<h2>validator</h2>
+</div>
+	</section>
+
+	<script src="js/script.js"></script>
 </body>
 </html>
