--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header class="header">
 		<div class="logo">
-			<a href="https://beetroot.se/">
+			<a href="https://beetroot.se/" target="_blank">
 				<img src="img/logo.png" alt="beetroot logo">
 			</a>
 		</div>
