--- a/src/index.html
+++ b/src/index.html
@@ -2,65 +2,61 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Presentation</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header class="header">
-		<div class="logo">
-			<a href="https://beetroot.se/" target="_blank">
-				<img src="img/logo.png" alt="beetroot logo">
-			</a>
-		</div>
-		<nav class="navigation">
-			<ul>
-				<li><a href="#beetroot">beetroot</a></li>
-				<li><a href="#html">html</a></li>
-				<li><a href="#css">css</a></li>
-				<li><a href="#gulp">gulp</a></li>
-				<li><a href="#js">js</a></li>
-				<li><a href="#validator">validator</a></li>
-			</ul>
-		</nav>
-	</header>
-	<section id="beetroot">
-		<div>
-			<img src="/img/beetroot-img.svg" alt="beetroot">
+<header class="header">
+	<div class="logo"><a class="logo__link" href="https://www.beetroot.academy" target="_blank"><img src="img/logo.png" alt="beetroot logo"></a></div>
+	<nav class="navigation">
+		<ul>
+			<li><a href="#item1">beetroot</a></li>
+			<li><a href="#item2">html</a></li>
+			<li><a href="#item3">css</a></li>
+			<li><a href="#item4">js</a></li>
+			<li><a href="#item5">gulp</a></li>
+			<li><a href="#item6">validator</a></li>
+		</ul>
+	</nav>
+</header>
+<main>
+	<section id="item1" class="section">
+		<article class="article">
+			<img src="img/item1-img.jpg" alt="section image">
 			<h2>beetroot</h2>
-		</div>
+		</article>
 	</section>
-	<section id="html">
-<div>
-	<img src="/img/html-img.jpg" alt="html">
-	<h2>html</h2>
-</div>
+	<section id="item2" class="section">
+		<article class="article">
+			<img src="img/item2-img.jpg" alt="section image">
+			<h2>html</h2>
+		</article>
 	</section>
-	<section id="css">
-<div>
-	<img src="/img/css-img.jpg" alt="css">
-	<h2>css</h2>
-</div>
+	<section id="item3" class="section">
+		<article class="article">
+			<img src="img/item3-img.jpg" alt="section image">
+			<h2>css</h2>
+		</article>
 	</section>
-	<section id="gulp">
-<div>
-	<img src="/img/gulp-img.jpg" alt="gulp">
-	<h2>gulp</h2>
-</div>
+	<section id="item4" class="section">
+		<article class="article">
+			<img src="img/item4-img.jpg" alt="section image">
+			<h2>js</h2>
+		</article>
 	</section>
-	<section id="js">
-<div>
-	<img src="/img/js-img.jpg" alt="js">
-	<h2>js</h2>
-</div>
+	<section id="item5" class="section">
+		<article class="article">
+			<img src="img/item5-img.jpg" alt="section image">
+			<h2>gulp</h2>
+		</article>
 	</section>
-	<section id="validator">
-<div>
-	<img src="/img/validator-img.jpg" alt="w3c validator">
-	<h2>validator</h2>
-</div>
+	<section id="item6" class="section">
+		<article class="article">
+			<img src="img/item6-img.jpg" alt="section image">
+			<h2>validator</h2>
+		</article>
 	</section>
-
-	<script src="js/script.js"></script>
+</main>
+<script src="js/script.js"></script>
 </body>
 </html>
