--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Presentation</title>
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicons.png">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
